--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
-  workflow_dispatch:  # allows you to run it manually from GitHub Actions tab
+  workflow_dispatch:
 
 jobs:
   build:
@@ -14,10 +14,13 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4.1.7
 
-      - name: Set up .NET Core
+      - name: Set up .NET
         uses: actions/setup-dotnet@v4.0.1
         with:
-          dotnet-version: '8.x'
+          dotnet-version: '8.0.x'
+
+      - name: Restore dependencies
+        run: dotnet restore src/MyApp/MyApp.csproj
 
       - name: Build code
-        run: dotnet build --configuration Release
+        run: dotnet build src/MyApp/MyApp.csproj --configuration Release
