--- a/.github/workflows/ENV VAR.yml
+++ b/.github/workflows/ENV VAR.yml
@@ -2,10 +2,6 @@ name: Env Var List
 
 on:
   workflow_dispatch:
-  push:name: Env Var List
-
-on:
-  workflow_dispatch:
   push:
     paths:
       - '.github/workflows/env-var-list.yml'
@@ -20,35 +16,13 @@ jobs:
   mac:
     runs-on: macos-latest
     steps:
-      - name: Display Environment Variables on MacOS
+      - name: Display Environment Variables on macOS
         run: printenv | sort
 
   windows:
     runs-on: windows-latest
     steps:
       - name: Display Environment Variables on Windows
-        run: printenv | sort
-        shell: bash
-
-    paths:
-      - '.github/workflows/env-var-list.yml'
-
-jobs:
-  ubuntu:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Display Environment Variables on Ubuntu
-        run: printenv | sort
-
-  mac:
-    runs-on: macos-latest
-    steps:
-      - name: Display Environment Variables on MacOS
-        run: printenv | sort
-
-  windows:
-    runs-on: windows-latest
-    steps:
-      - name: Display Environment Variables on Windows
-        run: printenv | sort
-        shell: bash
+        shell: pwsh
+        run: |
+          Get-ChildItem Env: | Sort-Object Name | Format-Table -AutoSize
