--- a/.github/workflows/WebAPI.yml
+++ b/.github/workflows/WebAPI.yml
@@ -1,17 +1,21 @@
 name: ASP.NET Web API Build
+
 on:
   workflow_dispatch:
   push:
     paths:
       - '.github/workflows/aspnet-webapi-build.yml'
       - 'src/dotnet/Weather.WebApi/**'
+
 jobs:
   build:
-    name: build
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
+
+      - name: List repo files
+        run: ls -R .
 
       - name: Build ASP.NET Weather Web API
         run: dotnet build
